--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,10 +5,19 @@ buildscript {
         mavenCentral()
     }
 
+
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.0'
+
+        classpath 'com.android.tools.build:gradle:7.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+
     }
+}
+plugins {
+
+    id 'com.google.gms.google-services' version '4.3.15' apply false
 }
 
 allprojects {
