--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  #firebase
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.6.3
+  cloud_firestore: ^4.9.1
+
+  #bloc
+  flutter_bloc: ^8.1.3
+  bloc: ^8.1.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
